# e2b-rs

./: .gitignore  Cargo.toml  README.md  TROUBLESHOOTING.md
examples/: basic.rs  code_interpreter.rs  commands_demo.rs  create_nodejs_template.rs  filesystem_demo.rs  list_templates.rs  sandbox.rs
src/: client.rs  config.rs  error.rs  lib.rs
src/api/: code_interpreter.rs  commands.rs  filesystem.rs  mod.rs  sandbox.rs  template.rs
src/models/: code_interpreter.rs  commands.rs  filesystem.rs  mod.rs  sandbox.rs  template.rs
src/rpc/: client.rs  message.rs  mod.rs
tests/: commands_tests.rs  filesystem_tests.rs  integration.rs
